Authentication Bug Fixes
